--- a/config/email.yml.example
+++ b/config/email.yml.example
@@ -1,5 +1,16 @@
 # Outgoing email settings
 
+production_gmail:
+  delivery_method: :smtp
+  smtp_settings:
+    address: "smtp.gmail.com"
+    port: "25"
+    domain: "yourdomain.com"
+    authentication: :login
+    user_name: "user@email.com"
+    password: "password"
+    tls: true
+
 production:
   delivery_method: :smtp
   smtp_settings:
